- Fix bug broken layout for salary position on the salary chart - Change and add skills for salary report page

--- a/src/main/webapp/assets/sass/current-job.sass
+++ b/src/main/webapp/assets/sass/current-job.sass
@@ -173,12 +173,7 @@
             width: 100%
             clear: both
             padding: 5px 0
-            text-align: left
-            span
-              display: block
-              width: 10%
-              float: left
-              font-weight: 400
+            text-align: center
             p
               width: 90%
               float: left
